updates: for SymbolInfo to retrieve the symbol name instead of the symbol id